[project]
name = "splatlog"
version = "0.5.0"
description = "Python logger that accepts ** values and prints 'em out."
authors = [{ name = "nrser", email = "neil@neilsouza.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "rich>=9",
    "typeguard>=4.0,<5",
    # TypeIs was added to stdlib typing in 3.13; remove when
    # requires-python >= 3.13
    "typing_extensions>=4.0; python_version < '3.13'",
]

[project.urls]
Homepage = "https://github.com/nrser/splatlog"
Repository = "https://github.com/nrser/splatlog"
Documentation = "http://nrser.com/splatlog"

[dependency-groups]
dev = [
    # Linter and formatter
    "ruff>=0.15.0",
    # Task runner
    "poethepoet>=0.40.0",
    # Type checker used in VSCode Python extension
    "pyright>=1.1.408",
    "pytest>=7.0",
    "tox>=4.0",
    # Plugin to let `tox` work with `uv` to get the Python runtimes it wants
    "tox-uv>=1.29.0",
    # Generate test data
    "faker>=40.15.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-autobuild>=2024.10.3",
    "furo>=2025.9.25",
]
notes = ["jupyter>=1.0.0,<2"]

# Tools
# ============================================================================

# UV
# ----------------------------------------------------------------------------

[tool.uv]
default-groups = [
    "dev",
    "notes",
    "docs",
]
no-build-isolation-package = ["pyyaml"]

# PyTest
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

# Poe (the Poet) Tool
# ----------------------------------------------------------------------------
# 
# Task runner, https://poethepoet.natn.io/
# 
# Tasks: https://poethepoet.natn.io/tasks/options.html
# Args: https://poethepoet.natn.io/guides/args_guide.html#task-argument-options

[tool.poe]
# Load `splatlog:report` task
include_script = "splatlog.poe:tasks"

### Watch ###

[tool.poe.tasks.watch]
parallel = ["docs watch"]
help = "Run all watch tasks in parallel"

### Test ###

[tool.poe.tasks.test]
cmd = "tox -e py3$py -- $path -vv"
help = "Run tests in a file or directory"

[[tool.poe.tasks.test.args]]
name = "py"
default = "13"
help = "Python version 3.X to use"

[[tool.poe.tasks.test.args]]
name = "path"
positional = true
help = "File path to test (source/doctest or pytest)"

### Type Check ###

[tool.poe.tasks.check]
cmd = "pyright"
help = "Run type checking on all files"

### Docs ###

[tool.poe.tasks.docs]
cmd = "make $target"
cwd = "docs"
# Serve docs at http://localhost:7564 
env = {SPHINX_PORT = "7564"} # T9: SLOG

[[tool.poe.tasks.docs.args]]
name = "target"
help = "Target in `docs/Makefile` to run. Use `html` target to build."
positional = true
multiple = true
choices = ["help", "html", "clean", "watch"]

# Pyright Tool
# ----------------------------------------------------------------------------
# 
# Type checker used in VSCode Python extension.
# 
# https://microsoft.github.io/pyright/

[tool.pyright]
# Mirror config in `.vscode/settings.json`
typeCheckingMode = "basic"

# Ruff Tool
# ----------------------------------------------------------------------------
# 
# Linter and formatter. https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 80

# Hatch(ling) Tool
# ----------------------------------------------------------------------------
# 
# Build (packaging) tool.

[tool.hatch.build.targets.sdist]
include = [
    "splatlog",
    "LICENSE",
]
exclude = []

[tool.hatch.build.targets.wheel]
include = [
    "splatlog",
    "LICENSE",
]
exclude = []

# Build System
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
